# crack-the-nut

./: .gitignore  HANDOFF.md  README.md  RESEARCH-REPORT.md  STRATEGY-REPORT.html  STRATEGY-REPORT.md  pyproject.toml
agents/: __init__.py  adversarial_ensemble.py  binary_calibration.py  llm_analyst.py  llm_analyst_xai.py
analog/: __init__.py  backfill.py  beta_strategies.py  champion.py  contrarian.py  ensemble.py  evaluators.py  example_pipeline.py  exit_analysis.py  finder.py  fingerprint.py  lead_lag.py  meta.py  run_15m_analysis.py  run_analysis.py  run_multi_asset.py  run_walkforward.py  scorer.py  simulate_liquidity.py  simulate_portfolio.py  simulate_top_n.py  store.py  strategies.py  surface.py  tp_trail_backtest.py  walkforward.py
backtest/: __init__.py
backtest/engine/: runner.py
config/: __init__.py  base.py  example.env
data/: __init__.py  database.py  models.py
docs/: 15m-analysis-prompt.md  CONTRIBUTING.md  ai-trading-mvp.md  ai-trading-research-prompt.md  ai-trading-thesis.md  architecture.md  bot-performance-report.md  exchange-notes.md
exchanges/: base.py
exchanges/dex/: __init__.py  adapter.py
exchanges/hyperliquid/: __init__.py  adapter.py
exchanges/polymarket/: adapter.py  fees.py  geo_guard.py  market_filter.py  redemption.py
execution/: __init__.py  risk.py
notify/: telegram.py
scheduler/: runner.py
scoring/: __init__.py  confidence.py  crypto_sentiment.py  momentum.py
strategies/: base.py
strategies/examples/: funding_arb.py  multi_factor_signal.py  whale_copy.py
