[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crack-the-nut"
version = "0.1.0"
description = "Shared trading toolkit — strategies, backtesting, and execution"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
    "aiosqlite>=0.20",
    "structlog>=24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
agents = [
    "anthropic>=0.30",
    "openai>=1.0",
]
hyperliquid = [
    "hyperliquid-python-sdk>=0.1",
]
polymarket = [
    "py-clob-client>=0.1",
]

[tool.setuptools.packages.find]
include = ["strategies*", "exchanges*", "data*", "backtest*", "execution*", "agents*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
